[gd_scene load_steps=10 format=3 uid="uid://cmxxcpl3dn5y"]

[ext_resource type="Script" path="res://scripts/buy_lure.gd" id="1_f2tms"]
[ext_resource type="PackedScene" uid="uid://bvn3ch0fobyub" path="res://scenes/catfood.tscn" id="2_px72w"]
[ext_resource type="Texture2D" uid="uid://gs77sbd7tit0" path="res://images/ui/catfood.png" id="3_mblb1"]
[ext_resource type="Texture2D" uid="uid://b7fiuxcxdkeuq" path="res://images/hats/meowboy_hat.png" id="4_8qs00"]
[ext_resource type="Texture2D" uid="uid://d3gcg3qf38m75" path="res://images/hats/meowboy_hat_pressed.png" id="5_6bdtl"]
[ext_resource type="Texture2D" uid="uid://drbwnkjy60sx3" path="res://images/hats/meowboy_hat_hover.png" id="6_6kwqr"]
[ext_resource type="PackedScene" uid="uid://pwngge8ttviq" path="res://scenes/floating_text.tscn" id="7_ntq54"]
[ext_resource type="Texture2D" uid="uid://bkf57disno6ye" path="res://images/catcoin/stackable_catcoin.png" id="8_e4nnv"]
[ext_resource type="LabelSettings" uid="uid://bipvhqgn1pls7" path="res://themes/smol_label_with_box.tres" id="9_jmnd6"]

[node name="Lure" type="HBoxContainer" groups=["lure_sellers"]]
custom_minimum_size = Vector2(62, 32)
theme_override_constants/separation = -8
script = ExtResource("1_f2tms")
LURE_SCENE = ExtResource("2_px72w")
cost = 100.0
lure_normal = ExtResource("3_mblb1")

[node name="BuyButton" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_8qs00")
texture_pressed = ExtResource("5_6bdtl")
texture_hover = ExtResource("6_6kwqr")
stretch_mode = 0

[node name="FloatingText" parent="BuyButton" instance=ExtResource("7_ntq54")]
unique_name_in_owner = true
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = -2

[node name="Coin" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("8_e4nnv")
expand_mode = 1

[node name="CostLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999k"
label_settings = ExtResource("9_jmnd6")
vertical_alignment = 2

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
